--- a/usage.html
+++ b/usage.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>画像ビューア 使い方・説明</title>
+  <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+  <link rel="alternate icon" href="assets/favicon.svg">
+  <link rel="stylesheet" href="assets/style.css">
   <style>
     body { font-family: sans-serif; background: #f8f9fa; color: #222; margin: 0; padding: 0; }
     .container { max-width: 700px; margin: 40px auto; background: #fff; border-radius: 12px; box-shadow: 0 4px 24px rgba(102,126,234,0.08); padding: 36px 28px; }
@@ -25,6 +28,8 @@
         2. 「クリップボードにコピー」付きのショートカットを設定
       </li>
     </ul>
+    <img src="assets/images/usage01.png" alt="使い方" style="width: 100%;">
+    <img src="assets/images/usage02.png" alt="使い方" style="width: 100%;">
     <h2>基本的な使い方</h2>
     <ul>
       <li><b>画像の追加：</b><br>
