--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>画像ビューア - クリップボード貼り付け</title>
 
     <!-- ファビコン -->
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="alternate icon"
-        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><circle cx='16' cy='16' r='15' fill='%23667eea' stroke='%23fff' stroke-width='1'/><rect x='8' y='6' width='16' height='18' rx='2' fill='none' stroke='%23fff' stroke-width='2'/><rect x='10' y='4' width='12' height='4' rx='1' fill='none' stroke='%23fff' stroke-width='2'/></svg>">
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+    <link rel="alternate icon" href="assets/favicon.svg">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
 
@@ -50,7 +49,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
